# sudoku

./: .clang-format  CMakeLists.txt  README.md
data/: data1.txt  data2.txt  example.txt
include/: Clause.hxx  Formula.hxx  Literal.hxx  Solver.hxx  Sudoku.hxx
src/: Clause.cxx  Formula.cxx  Literal.cxx  Solver.cxx  Sudoku.cxx  main.cxx
test/: utilsTest.cxx
